--- a/src/components/feedbackOptions/FeedbackOptions.module.css
+++ b/src/components/feedbackOptions/FeedbackOptions.module.css
@@ -1,11 +1,12 @@
 .feedback-btns button {
     width: 70px;
     height: 30px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
 .feedback-btns button:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 18px;
     transition: transform 100ms linear;
 }
 
